fix new spacing

--- a/quizlet/public/stylesheets/style.css
+++ b/quizlet/public/stylesheets/style.css
@@ -469,6 +469,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.m-10 {
+  margin: 2.5rem;
+}
+
 .m-3 {
   margin: 0.75rem;
 }
@@ -478,8 +482,24 @@ video {
   margin-right: auto;
 }
 
-.mb-10 {
+.my-10 {
+  margin-top: 2.5rem;
   margin-bottom: 2.5rem;
+}
+
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
+.mx-\[20vw\] {
+  margin-left: 20vw;
+  margin-right: 20vw;
+}
+
+.mx-\[10vw\] {
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
 
 .block {
@@ -555,20 +575,6 @@ video {
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.bg-\[\#005cf5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 92 245 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#4255ff\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(66 85 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#fb\] {
-  background-color: #fb;
 }
 
 .bg-\[\#fb4d3d\] {
